[metadata]
name = lpsnav
version = 1.0.0
description = A navigation framework capable of reasoning on its legibility and predictability
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jlbas/lpsnav
author = Jean-Luc Bastarache
author_email = jbastarache@uwaterloo.ca
license = MIT
license_file = LICENSE

[options]
python_requires = >= 3.9
packages = find:
install_requires = 
  matplotlib
  numpy
  pandas
  seaborn
  sympy
  scipy
  tabulate
  tensorflow
  tomli
  tqdm

[flake8]
max-line-length = 100
